5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1593_1805.log
== TEST (2019-03-30 00:48:27) 
-- CODE:
xa = float(input("Digite a coordenada xa:"))
xb = float(input("Digite a coordenada xb:"))
ya = float(input("Digite a coordenada ya:"))
yb = float(input("Digite a coordenada yb:"))
xM = (xb+xa)/2
yM = (yb+ya)/2
print (round xM,1)
print (round yM,1)
-- ERROR:
File "XXXX", line 7
    print (round xM,1)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 00:48:51) 
-- CODE:
xa = float(input("Digite a coordenada xa:"))
xb = float(input("Digite a coordenada xb:"))
ya = float(input("Digite a coordenada ya:"))
yb = float(input("Digite a coordenada yb:"))
xM = (xb+xa)/2
yM = (yb+ya)/2
print (round (xM,1))
print (round (yM,1))
-- OUTPUT:
37.5
39.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 00:49:50) 
-- CODE:
xa = float(input("Digite a coordenada xa:"))
xb = float(input("Digite a coordenada xb:"))
ya = float(input("Digite a coordenada ya:"))
yb = float(input("Digite a coordenada yb:"))
xM = (xb+xa)/2
yM = (yb+ya)/2
print (round (xM,1))
print (round (yM,1))
-- OUTPUT:
37.5
39.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 00:50:30) 
-- CODE:
xa = int(input("Digite a coordenada xa:"))
xb = int(input("Digite a coordenada xb:"))
ya = int(input("Digite a coordenada ya:"))
yb = int(input("Digite a coordenada yb:"))
xM = (xb+xa)/2
yM = (yb+ya)/2
print (round (xM,1))
print (round (yM,1))
-- OUTPUT:
37.5
39.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 00:51:12) 
-- CODE:
xa = int(input("Digite a coordenada xa:"))
xb = int(input("Digite a coordenada xb:"))
ya = int(input("Digite a coordenada ya:"))
yb = int(input("Digite a coordenada yb:"))
xM = (xb+xa)/2
yM = (yb+ya)/2
print float(round (xM,1))
print float(round (yM,1))
-- ERROR:
File "XXXX", line 7
    print float(round (xM,1))
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 00:51:28) 
-- CODE:
xa = int(input("Digite a coordenada xa:"))
xb = int(input("Digite a coordenada xb:"))
ya = int(input("Digite a coordenada ya:"))
yb = int(input("Digite a coordenada yb:"))
xM = (xb+xa)/2
yM = (yb+ya)/2
print float((round (xM,1)))
print float((round (yM,1)))
-- ERROR:
File "XXXX", line 7
    print float((round (xM,1)))
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 00:52:08) 
-- CODE:
xa = int(input("Digite a coordenada xa:"))
xb = int(input("Digite a coordenada xb:"))
ya = int(input("Digite a coordenada ya:"))
yb = int(input("Digite a coordenada yb:"))
xM = (xb+xa)/2
yM = (yb+ya)/2
print (round (xM,1))
print (round (yM,1))
-- EXECUTION TIME:
0.151185
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
37.5
39.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:

-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 00:54:05) 
-- CODE:
xa = float(input("Digite a coordenada xa:"))
xb = float(input("Digite a coordenada xb:"))
ya = float(input("Digite a coordenada ya:"))
yb = float(input("Digite a coordenada yb:"))
xM = ((xb+xa)/2)
yM = ((yb+ya)/2)
print (round (xM,1))
print (round (yM,1))
-- EXECUTION TIME:
0.207768
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
37.5
39.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
2.8
3.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
1.8
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 00:54:25) 
-- CODE:
xa = float(input("Digite a coordenada xa:"))
xb = float(input("Digite a coordenada xb:"))
ya = float(input("Digite a coordenada ya:"))
yb = float(input("Digite a coordenada yb:"))
xM = ((xb+xa)/2)
yM = ((yb+ya)/2)
print (round (xM,1))
print (round (yM,1))
-- OUTPUT:
37.5
39.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 00:58:04) 
-- CODE:
xa = float(input("Digite a coordenada xa:"))
ya = float(input("Digite a coordenada ya:"))
xb = float(input("Digite a coordenada xb:"))
yb = float(input("Digite a coordenada yb:"))
xM = ((xb+xa)/2)
yM = ((yb+ya)/2)
print (round (xM,1))
print (round (yM,1))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 00:58:17) 
-- CODE:
xa = float(input("Digite a coordenada xa:"))
ya = float(input("Digite a coordenada ya:"))
xb = float(input("Digite a coordenada xb:"))
yb = float(input("Digite a coordenada yb:"))
xM = ((xb+xa)/2)
yM = ((yb+ya)/2)
print (round (xM,1))
print (round (yM,1))
-- EXECUTION TIME:
0.151636
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
3.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
